# Xedra_Chess

./: .gitignore  README.md
Client/Chess/: Assembly-CSharp.csproj
Client/Chess/Assets/: script_GameManager.cs
Client/Chess/Assets/Resources/Perfabs/: BlackPiece.prefab  WhitePiece.prefab
Client/Chess/Assets/Resources/Perfabs/Chess/: BlackStoneBishop.prefab  BlackStoneHorse.prefab  BlackStoneKing.prefab  BlackStonePawn.prefab  BlackStoneQueen.prefab  BlackStoneRook.prefab  WhiteStoneBishop.prefab  WhiteStoneHorse.prefab  WhiteStoneKing.prefab  WhiteStonePawn.prefab  WhiteStoneQueen.prefab  WhiteStoneRook.prefab
Client/Chess/Assets/Resources/Perfabs/Gobang/: BlackPiece.prefab  WhitePiece.prefab
Client/Chess/Assets/Resources/config/: ChessType.txt  DatabaseCfg.txt  GlobalCfg.txt
Client/Chess/Assets/Scenes/: Chess.unity  Gobang.unity  Lobby.unity  Login.unity  SampleScene.unity
Client/Chess/Assets/art/: BlackPiece.FBX  WhitePiece.FBX  board.FBX
Client/Chess/Assets/art/Materials/: 3d66Model-644200-files-1.mat  3d66Model-644200-files-2.mat  board-Material #31.mat  board-Material #32.mat
Client/Chess/Assets/script/: Msg.cs  MsgMgr.cs  TableConfig.cs  TableStruct.cs  gobang_GameManager.cs  script_ChessBoard.cs  script_ChessPieces.cs
Client/Chess/Assets/script/GameScript/: MsgMgr.cs  script_GameManager.cs
Client/Chess/Assets/script/GameScript/Chess/: chess_GameManager.cs  script_ChessBoard.cs  script_ChessPieces.cs
Client/Chess/Assets/script/GameScript/Gobang/: gobang_GameManager.cs  script_GobangBoard.cs  script_GobangPieces.cs
Client/Chess/Assets/script/GameScript/Lobby/: Lobby_GameManager.cs
Client/Chess/Assets/script/GameScript/Login/: script_LoginManager.cs
Client/Chess/Assets/script/MsgPB/: Msg.cs  MsgChat.cs
Client/Chess/Assets/script/config/: DatabaseCfg .txt
Client/Chess/Assets/script/protobuf-net/Properties/: New Animator Controller.controller
Client/Chess/Assets/script/tabtool/: MyConfig.cs  ReadTable.cs  TableConfig.cs  TableStruct.cs
Client/Chess/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Client/Chess/Temp/: UnityTempFile-6145338e3adf9b04a8e3fa797e9f69b2
Common/: 项目内容.xmind
Common/Msg/: copy.bat  一键导出.bat
Common/Msg/cpp/: Msg.pb.cc  Msg.pb.h  MsgChat.pb.h
Common/Msg/csharp/: Msg.cs
Common/Msg/java/: Msg.java  MsgChat.java
Common/Msg/java/MsgPB/: Msg.java  MsgChat.java
Common/Msg/protocols/: Msg.proto
Config/: ChessType.xlsx  DatabaseCfg.xlsx  GlobalCfg.xlsx
Config/JohanceTools/: convert.bat
Config/JohanceTools/Cache/: ExcelCache.xml
Config/JohanceTools/Cache/CSV/: Card.csv
Config/JohanceTools/Cpp/: TableLoader.h
Config/JohanceTools/Csharp/: CardConfig.cs
Config/Tabtoy/: copy.bat  一键导表.bat
Config/Tabtoy/config/: ChessType.txt
Config/Tabtoy/cpp/: tableconfig.cpp  tableconfig.h  tablestruct.h
Config/Tabtoy/csharp/: TableConfig.cs
Server/: CMakeLists.txt  utils.cmake
Server/cmake/: findmysql.cmake
Server/lib/: CMakeLists.txt
Server/lib/libbaseutil/source/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  LogUtil.h  RandomUtil.cpp  RandomUtil.h  StringUtil.cpp  StringUtil.h  format.cc  format.h  tinyxml2.cpp  tinyxml2.h
Server/lib/libbaseutil/source/utf8/: checked.h  unchecked.h
Server/lib/libconfig/source/: BaseTable.h  CMakeLists.txt  ConfigModule.cpp  ConfigModule.h  ConfigService.cpp  ConfigService.h  DataService.cpp  DataService.h  IPluginManager.h
Server/lib/libconfig/source/automake/: CardConfig.h  tableconfig.cpp  tableconfig.h  tablestruct.h
Server/lib/libconfig/source/automake/config/: ChessType.txt
Server/lib/libconfig/source/tabletool/: myconfig.h
Server/lib/libgame/Source/: CMakeLists.txt  ClientUser.cpp  ClientUser.h  Facade.cpp  Facade.h  MsgMgr.cpp  MsgMgr.h
Server/lib/libgame/Source/Game/: Game.cpp  Game.h  GameManager.cpp  GameManager.h
Server/lib/libgame/Source/Game/Chess/: ChessGame.cpp  ChessGame.h  ChessManager.cpp  ChessManager.h  ChessPiece.cpp  ChessPiece.h  ChessRule.cpp  ChessRule.h
Server/lib/libgame/Source/Game/Gobang/: GobangGame.cpp  GobangGame.h  GobangManager.cpp  GobangManager.h
Server/lib/libgame/Source/Moudle/: NetMoudle.cpp  NetMoudle.h
Server/lib/libjsoncpp/source/: CMakeLists.txt
Server/lib/libjsoncpp/source/json/: autolink.h  config.h  features.h  forwards.h  json_batchallocator.h  json_lib.h  json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp  reader.h  value.h  writer.h
Server/lib/libmsg/protocols/: GenClientLocalCpp.bat  SyncAllMsg.bat
Server/lib/libmsg/source/: CMakeLists.txt
Server/lib/libmsg/source/msg/: Msg.pb.cc  Msg.pb.h  MsgChat.pb.cc
Server/lib/libmysql/source/: CMakeLists.txt  IQueryResult.h  MySqlQueryResult.h  MySqlServer.cpp  MySqlServer.h  MySqlService.cpp  MySqlService.h
Server/lib/libprotobuf/source/: CMakeLists.txt
Server/lib/libprotobuf/source/google/: copy.bat
Server/lib/libprotobuf/source/google/protobuf/: message.cc  message.h
Server/lib/libprotobuf/source/google/protobuf/android/: config.h
Server/src/: BaseUtil.h  CMakeLists.txt  ClientUser.cpp  ClientUser.h  Facade.cpp  Facade.h  Moudle.cpp  Moudle.h  MsgMgr.cpp  MsgMgr.h  main.cpp
Server/src/Moudle/: NetMoudle.cpp  NetMoudle.h
Server/src/msg/protocols/: GenClientCpp.bat  GenClientLocalJava.bat
Server/src/msg/protocols/protocols/: MsgType.proto
Server/src/msg/source/: CMakeLists.txt
Server/src/msg/source/msg/: Msg.pb.cc  Msg.pb.h
