# CMakeList.txt: DesignModeLib 的 CMake 项目，在此处包括源代码并定义
# 项目特定的逻辑。
#
cmake_minimum_required (VERSION 3.8)


set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
add_subdirectory("libjsoncpp/source")
add_subdirectory("libprotobuf/source")
add_subdirectory("libmysql/source")
add_subdirectory("libconfig/source")
add_subdirectory("libmsg/source")


# TODO: 如有需要，请添加测试并安装目标。
